ghc-4335c07/testsuite/tests/deriving/should_fail/T4083.stderr

T4083.hs:14:1: error:
    • Can't make a derived instance of ‘C (F [a])’
        (even with cunning GeneralizedNewtypeDeriving):
        the class has associated data types
    • In the stand-alone deriving instance for
        ‘C (Maybe a) => C (F [a])’
